# casocad

./: .gitignore  AGENTS.md  Cargo.toml  DESIGN.md  NOTICE  PLAN.md  README.md  casocad.py  llmscene.json  pyproject.toml  requirements.txt  scene.json  scene2.json  scene3.json  scenerect.json
app/: Cargo.toml  __init__.py  artifacts.py  axis_labels.py  dimensions.py  flow_sim_arrow.py  flow_sim_map.py  flow_sim_panel.py  flow_sim_view.py  launcher.py  main.py  main_window.py  mesher_process.py  signals.py  title_bar.py
casoWASM/: DESIGN.md  README.md
casoWASM/app/: Cargo.toml
casoWASM/app/src/: boundary_tool.rs  gizmo.rs  lib.rs  meshing_panel.rs  tools.rs  viewport_panel.rs
casoWASM/kernel/: Cargo.toml
casoWASM/kernel/examples/: resave.rs
casoWASM/kernel/src/: bbox.rs  boundary.rs  boundary_ops.rs  boundary_paths.rs  error.rs  preconditions.rs  roles.rs  scene.rs  serialization.rs  vec3.rs
casoWASM/kernel/src/sdf/: curtain.rs  placed.rs  solid_from_2d.rs
casoWASM/kernel/tests/: boundary_classifier.rs  meshing.rs  parity.rs  roundtrip.rs  scene_ops.rs
casoWASM/kernel/tests/goldens/: default_python_resave.json  scene_python_resave.json
casoWASM/meshing/: Cargo.toml
casoWASM/meshing/examples/: write_sample.rs
casoWASM/meshing/src/: lib.rs
casoWASM/render/: Cargo.toml
casoWASM/render/src/: lib.rs  renderer.rs
casoWASM/render/src/shaders/: grid_axes.wgsl  line.wgsl  surface.wgsl
core/: __init__.py  boundary.py  boundary_direction.py  boundary_patches.py  boundary_paths.py  boundary_region.py  boundary_selection.py  domain.py  domain_interface.py  gpu_codegen.py  gpu_cull.py  gpu_features.py  gpu_node_types.py  gpu_program.py  gpu_scene.py  gpu_selector.py  model.py  preconditions.py  render_ir.py  scene.py  sdf_attribution.py  sdf_profiles.glsl  serialization.py  surface_provenance.py
design_dialogues/: ffi_multilanguage_bindings.md
design_docs/: boundary_region_2d.md  boundary_region_2d_precision.md  boundary_region_v2.md  exact_sdf_decisions.md  ffi_multilanguage_bindings.md  fix_pack_2026_07.md  mesh_preview_opacity_independence.md  meshing_toolkit.md
docs/: console_draw_api.md  demo.js  dual_countoring_migration.md  exact_sdf_decisions.md  exact_signed_distance_field_cfd_migration_v2.md  index.html  mesh_quality_measure.md  mesher_script_api.md  reach_feature_parity.md  sdf_interpreter_migration_v5.md  sdf_mesher_integration.md  style.css
examples/: lbm_d2q9_arrow.py
meshing/: Cargo.toml
progress/: 1D_2D_not_rendered_fix.md  codegen_full_migration.md  meshing_api_workspace_integration.md  meshing_viewer_integration.md  opengl_backend_orientation_and_full_features.md  per_scene_specialized_shader_pivot.md  specialize_shaders_integration.md  switch_to_QRhiWidget_progress.md
scenes/: __init__.py  boolean_operations.py  ex.json  lattice_benchmark.py  naca.json  pipe_3d.py  placed_section_tags.py  scene_von_karm.json  von_karman_cylinder.py
spikes/: qrhi_scene_spike.py
surfaces/: Cargo.toml
surfaces/src/: boundary_outline.rs  builders.rs  contouring.rs  lib.rs  profiles2d.rs  types.rs
surfaces/tests/: boolean_holes.rs  boundary_outline_arcs.rs  concave_fill.rs  revolve_caps.rs  surface_parity.rs
surfaces/tests/goldens/: surface_goldens.txt
tests/: boundary_region_workflow_smoke.py  gui_workflow_smoke.py  render_added_sphere_cavity_smoke.py  render_difference_smoke.py  render_empty_scene_grid_smoke.py  render_move_preview_smoke.py  render_object_colors_smoke.py  render_scene_highlight_smoke.py  render_selected_1d_smoke.py  render_selected_2d_smoke.py  render_selected_boundary_regions_smoke.py  render_transparency_smoke.py  test_arrow_roundtrip.py  test_artifacts.py  test_axis_labels.py  test_boolean_preview_commit.py  test_boundary_cutter_ui.py  test_boundary_patches.py  test_boundary_paths.py  test_boundary_region_classifier.py  test_boundary_serialization.py  test_boundary_split.py  test_camera.py  test_csg.py  test_dimensions.py  test_domain_interface.py  test_exactness_regression.py  test_examples.py  test_flow_sim.py  test_gpu_codegen.py  test_gpu_cull.py  test_gpu_memory_budget.py  test_gpu_program.py  test_gpu_region_parity.py  test_gpu_scene.py  test_interpreter_renderer.py  test_lattice_renderer.py  test_lbm_d2q9_arrow.py  test_main_window.py  test_mesh_api.py  (+44 more)
tools/: codegen_demo.py  codegen_stress.py  fps_bench.py  qrhi_compile_log_summary.py  ultimate_frame_test.py
web/: index.html
(+207 files in other folders)
