[project]
name = "casoCAD"
version = "0.1.0"
description = "Programmable SDF-based lattice-grid CAD engine with PySide6, ModernGL and Apache Arrow export."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [
    { name = "Edoardo Failla" }
]

dependencies = [
    "PySide6==6.11.1",
    "moderngl==5.12.0",
    "glcontext==3.0.0",
    "pyarrow==24.0.0",
    "numpy>=2.0.0",
]

[project.optional-dependencies]
# Flow "Sim" animation is an opt-in feature. Without it the simulation panel
# stays disabled; everything else (modelling, meshing, Arrow export) works.
sim = [
    "jax>=0.10.2",
]
# Same feature, accelerated on an NVIDIA GPU (CUDA 12 jaxlib).
sim-cuda = [
    "jax[cuda12]>=0.10.2",
]
dev = [
    "pytest>=8.0.0",
]

[build-system]
requires = ["setuptools>=75.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*", "core*", "scenes*"]

[tool.setuptools.package-data]
"app.viewport" = ["shaders/*.vert", "shaders/*.frag", "shaders/*.glsl"]

[tool.pytest.ini_options]
testpaths = ["tests"]
