[package]
name = "caso-app"
description = "casoWASM application: egui UI + wgpu viewport (web and native)"
version.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
caso-kernel = { path = "../kernel" }
caso-surfaces = { path = "../surfaces" }
caso-render = { path = "../render" }
caso-meshing = { path = "../meshing" }
rhai = "1"
serde_json = "1"
eframe = { version = "0.35.0", features = ["wgpu"] }
egui_dock = "0.20.1"

[[bin]]
name = "casowasm"
path = "src/main.rs"

[lib]
crate-type = ["cdylib", "rlib"]

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["Window", "Document", "HtmlCanvasElement", "HtmlAnchorElement", "Url", "Blob"] }
js-sys = "0.3"
getrandom = { version = "0.3", features = ["wasm_js"] }
log = "0.4"
